Connect database to site's search functionality

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "3.x",
     "mongodb": "*",
     "nodemon": "~0.7.10",
-    "less-middleware": "~0.1.14"
+    "less-middleware": "~0.1.14",
+    "async": "~0.2.9"
   }
 }
