--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "description": "Employee Directory API",
     "version": "0.0.1",
     "private": true,
+    "scripts": {
+      "start": "nodemon server.js"
+    },
     "dependencies": {
         "express": "3.x",
         "mongodb": "*",
